Upgrade blog file for v2

--- a/website/blog/2020-03-26-version-0.62.md
+++ b/website/blog/2020-03-26-version-0.62.md
@@ -2,8 +2,8 @@
 title: Announcing React Native 0.62 with Flipper
 author: Rick Hanlon
 authorTitle: React Native Core at Facebook
-authorURL: https://twitter.com/rickhanlonii
-authorImageURL: https://avatars3.githubusercontent.com/u/2440089?s=460&v=4
+authorURL: 'https://twitter.com/rickhanlonii'
+authorImageURL: 'https://avatars3.githubusercontent.com/u/2440089?s=460&v=4'
 authorTwitter: rickhanlonii
 category: announcements
 ---
@@ -16,7 +16,7 @@ This release comes in the midst of a global pandemic. We’re releasing this ver
 
 [Flipper](https://fbflipper.com/) is a developer tool for debugging mobile apps. It’s popular in the Android and iOS communities, and in this release we’ve enabled support by default for new and existing React Native apps.
 
-![Screenshot of Flipper for React Native](/blog/assets/0.62-flipper.png)
+![Screenshot of Flipper for React Native](./assets/0.62-flipper.png)
 
 Flipper provides the following features out of the box:
 
