--- a/website/blog/2019-07-17-hermes.md
+++ b/website/blog/2019-07-17-hermes.md
@@ -2,8 +2,8 @@
 title: Meet Hermes, a new JavaScript Engine optimized for React Native
 author: Rachel Nabors
 authorTitle: Documentation Engineer at Facebook
-authorURL: https://twitter.com/rachelnabors
-authorImageURL: https://avatars0.githubusercontent.com/u/236306?s=460&v=4
+authorURL: 'https://twitter.com/rachelnabors'
+authorImageURL: 'https://avatars0.githubusercontent.com/u/236306?s=460&v=4'
 authorTwitter: rachelnabors
 category: announcements
 ---
@@ -16,4 +16,4 @@ Hermes improves React Native performance by decreasing memory utilization, reduc
 
 Want to get started right away? Be sure to [check out our new guide to enabling Hermes in your existing React Native app](/docs/hermes/) in the docs!
 
-[![Illustration of the Hermes and React Native logos joined into a winged fury, rising in a crashing electrical storm from a lone, glowing, presumably Android phone.](/blog/assets/2019_hermes-launch-illo-rachel-nabors.jpg)](https://code.fb.com/android/hermes/) _Illustration by Rachel Nabors_
+[![Illustration of the Hermes and React Native logos joined into a winged fury, rising in a crashing electrical storm from a lone, glowing, presumably Android phone.](./assets/2019_hermes-launch-illo-rachel-nabors.jpg)](https://code.fb.com/android/hermes/) _Illustration by Rachel Nabors_
