--- a/website/blog/2020-07-06-version-0.63.md
+++ b/website/blog/2020-07-06-version-0.63.md
@@ -2,8 +2,8 @@
 title: Announcing React Native 0.63 with LogBox
 author: Mike Grabowski
 authorTitle: CTO and Co-Founder at Callstack
-authorURL: https://twitter.com/grabbou
-authorImageURL: https://avatars0.githubusercontent.com/u/2464966?s=460&v=4
+authorURL: 'https://twitter.com/grabbou'
+authorImageURL: 'https://avatars0.githubusercontent.com/u/2464966?s=460&v=4'
 authorTwitter: grabbou
 category: announcements
 ---
@@ -14,7 +14,7 @@ Today we’re releasing React Native 0.63 that ships with LogBox turned on by de
 
 We’ve heard frequent feedback from the community that errors and warnings are difficult to debug in React Native. To address these issues we took a look at the entire error, warning, and log system in React Native and redesigned it [from the ground up](https://www.youtube.com/watch?v=Y8brBH5O-bQ&feature=youtu.be).
 
-![Screenshot of LogBox](/blog/assets/0.63-logbox.png)
+![Screenshot of LogBox](./assets/0.63-logbox.png)
 
 LogBox is a completely redesigned redbox, yellowbox, and logging experience in React Native. In 0.62 we introduced LogBox as an opt-in. In this release, we’re launching LogBox as the default experience in all of React Native.
 
@@ -66,7 +66,7 @@ import { Pressable, Text } from 'react-native';
 ```
 
 <p class="snippet-caption">
-A simple example of a Pressable component in action
+  A simple example of a Pressable component in action
 </p>
 
 You can learn more about it from [the documentation](https://reactnative.dev/docs/pressable).
@@ -90,7 +90,8 @@ import { Text, PlatformColor } from 'react-native';
 ```
 
 <p class="snippet-caption">
-Sets the color of the Text component to labelColor as defined by iOS.
+  Sets the color of the Text component to labelColor as defined by
+  iOS.
 </p>
 
 Android, on the other hand, [provides colors like colorButtonNormal](https://developer.android.com/reference/android/R.attr#colorButtonNormal). You can use this color in React Native with:
@@ -107,7 +108,8 @@ import { View, Text, PlatformColor } from 'react-native';
 ```
 
 <p class="snippet-caption">
-Sets the background color of the View component to colorButtonNormal as defined by Android.
+  Sets the background color of the View component to
+  colorButtonNormal as defined by Android.
 </p>
 
 You can learn more about `PlatformColor` from [the documentation](https://reactnative.dev/docs/platformcolor). You can also check the actual [code examples present in the RNTester](https://github.com/facebook/react-native/blob/master/RNTester/js/examples/PlatformColor/PlatformColorExample.js).
@@ -128,7 +130,7 @@ const customDynamicTextColor = DynamicColorIOS({
 ```
 
 <p class="snippet-caption">
-Changes the text color based on the system theme
+  Changes the text color based on the system theme
 </p>
 
 You can learn more about `DynamicColorIOS` from [the documentation](https://reactnative.dev/docs/dynamiccolorios).
