extend script and alias in magic

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -437,6 +437,9 @@
       "virtualizedlist": {
         "title": "VirtualizedList"
       },
+      "virtualizedsectionlist": {
+        "title": "VirtualizedSectionList"
+      },
       "version-0.10/version-0.10-modal": {
         "title": "Modal"
       },
